<resources>
    <string name="app_name">mCitrusPad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectDate">Select Date</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="mSet">M set meal</string>
    <string name="gSet">G set meal</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="order_list">Order List</string>
    <string name="table_no">Table NO.</string>
    <string name="device">Device number</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_subtotal">Add Subtotal: </string>
    <string name="select_add">Please select your addition or flavor:</string>
    <string name="weight">Weight</string>
    <string name="select_size">Please select the size</string>
    <string name="input_weight">Please input the weight</string>
    <string name="send">Send</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="select_meal">Please select a sub meal:</string>
    <string name="select_one">Please select one item!</string>
    <string name="select_meal_change">Change the sub meal:</string>
    <string name="check_combo">Please check your sub meal.</string>
    <string name="send_order">Send Order</string>
    <string name="send_confirm">Are you sure to send this order?</string>
    <string name="payment_confirm">Are you sure to checkout this order?</string>
    <string name="total_price">Total price</string>
    <string name="qty">Qty</string>
    <string name="order_empty">Your order list is empty.</string>
    <string name="serviceType">Service type</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="sent_unsuccessfully">Sent unsuccessfully</string>
    <string name="adv_time">Ads auto play time: </string>
    <string name="s">s</string>
    <string name="m">m</string>
    <string name="home">Home</string>
    <string name="printer">Printer</string>
    <string name="memo_size">Memo Font Size</string>
    <string name="small">small</string>
    <string name="large">large</string>
    <string name="orderNO">Order No.</string>
    <string name="show_price">Kitchen check show price</string>
    <string name="isCut">1 item 1 cut</string>
    <string name="memo">Memo</string>
    <string name="print_subtotal">Subtotal</string>
    <string name="item_name">Item</string>
    <string name="print_failed">Print failed</string>
    <string name="inform_clerk">Please inform the clerk.</string>
    <string name="adv_qty">Ads qty: </string>
    <string name="go_gome_time">Back to home time:</string>
    <string name="price">Price</string>
    <string name="employeeId">Employee ID</string>
    <string name="enable_KDS">Enable KDS</string>
    <string name="enable_service_charge">Enable service charge</string>
    <string name="enable_tax">Enable tax</string>
    <string name="tax">Tax</string>
    <string name="service_charge">Service charge</string>
    <string name="itemSend">Send</string>
    <string name="not_include">This Price does not include</string>
    <string name="input_security_code">Please enter the security code：</string>
    <string name="input_setting_code">Please enter the code</string>
    <string name="allSent">All items have been sent.</string>
    <string name="processed">Under processing, please wait for a moment.</string>
    <string name="cannotFindTable">Cannot find the table number</string>
    <string name="device_name_wrong">Device name must be 3 in length</string>
    <string name="enable_table">Enable table selection function</string>
    <string name="occupied_table">The table is occupied!</string>
    <string name="secondDesc">2nd Desc</string>
    <string name="SEND">Send</string>
    <string name="HOLD">Hold</string>
    <string name="overQty">Over qty</string>
    <string name="notFinish">Not finish yet</string>
    <string name="clear">Clear</string>
    <string name="cannotChangeQty">This set cannot change qty.</string>
    <string name="please_wait">Please wait</string>
    <string name="rounding">Rounding</string>
    <string name="decimal_places">Decimal Places</string>
    <string name="disc">Disc</string>
    <string name="tax_function">Tax Function</string>
    <string name="math_way">Method of operation</string>
    <string name="round_up">Round up</string>
    <string name="round_up_or_down">Round up or down</string>
    <string name="round_down">Round down</string>
    <string name="special_rounded">Special rounding</string>
    <string name="included">Included</string>
    <string name="excluded">Excluded</string>
    <string name="enable_stock">Enable Stock</string>
    <string name="summary_use_usb">Summary use usb print</string>
    <string name="use_USB_printer">Use USB Printer</string>
    <string name="summary2_use_usb">Summary2 use usb print</string>
    <string name="refresh_usb_device">Refresh USB Device</string>
    <string name="stock">Stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="update_stock_failed">Update stock failed</string>
    <string name="reconfirm">Please reconfirm.</string>
    <string name="choose_again">Please choose again.</string>
    <string name="data_loading">Loading…</string>
    <string name="complete_order">"If you want to exit this page, please complete(Hold or Send) the order while in Stock mode. "</string>
    <string name="order_not_complete">The order was not completed.</string>
    <string name="hold_confirm">Are you sure to hold this order?</string>
    <string name="ip_wrong">IP input error.</string>
    <string name="table_error">The table number is in error.</string>
    <string name="device_error">The device number is empty.</string>
    <string name="go_to_setting_confirm">Please go to the settings page to confirm.</string>
    <string name="select_order">Please select an order.</string>
    <string name="go_to_home_page">Do you want to jump to the home page?</string>
    <string name="choose_another_product">Please choose another product.</string>
    <string name="enable_open_foods">Enable OPEN FOODS</string>
    <string name="input_opfood">Please input name:</string>
    <string name="use_offline_menu">Use the offline menu</string>
    <string name="refresh_adv">Update AD Image</string>
    <string name="update_one_item">Update one item</string>
    <string name="refresh_menu">Update Menu</string>
    <string name="update_completed">Update completed!</string>
    <string name="confirm_again">Please confirm again.</string>
    <string name="table_mode">Table mode</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="standard">Standard edition</string>
    <string name="enterprise">Enterprise edition</string>
    <string name="input_enterprise_code">Enterprise license key</string>
    <string name="take_out">Take-out</string>
    <string name="isBluetoothPrint">Use Bluetooth Print</string>
    <string name="receipt_footer">Receipt footer</string>
    <string name="payByCash">Pay by Cash</string>
    <string name="payByCard">Pay by Membership Card</string>
    <string name="payment_completed">payment completed</string>
    <string name="sale_pos_no">Pos NO. (Real-time Sales)</string>
    <string name="select_your_printer">Select your printer</string>
    <string name="set_printer">Set printers</string>
    <string name="test_printer">Test printer</string>
    <string name="print">print</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connected">Connected</string>
    <string name="Bluetooth_is_turned_on">Bluetooth is turned on</string>
    <string name="Bluetooth_is_turned_off">Bluetooth is turned off</string>
    <string name="No_printer_selected">No print device selected yet</string>
    <string name="companyName">Company name</string>
    <string name="paid_amount_zero">The amount paid can not be less than the amount payable.</string>
    <string name="taxInvoice">Tax Invoice</string>
    <string name="sub">Sub</string>
    <string name="createTime">Create time</string>
    <string name="print_time">Print time</string>
    <string name="closeTime">Close time</string>
    <string name="paymentWay">Payment</string>
    <string name="TaxID">Tax ID</string>
    <string name="storeName">Store Name</string>
    <string name="grandTotal">Grand Total</string>
    <string name="Please_wait">Please wait</string>
    <string name="printer_no_exist">The printer does not exist, Do you want to continue checkout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Card_ID">Card ID:</string>
    <string name="Membership_id">Membership ID:</string>
    <string name="Balance">Balance:</string>
    <string name="storeNum">Store number:</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="scanQRCode">Scan QRCode</string>
    <string name="choosePayWay">Please choose the pay way.</string>
    <string name="original">Original price</string>
    <string name="amt">Amt:</string>
    <string name="paid">Paid</string>
    <string name="gTotal">GTotal</string>
    <string name="Incl">Incl.</string>
    <string name="Excl">Excl.</string>
    <string name="tip">Tip</string>
    <string name="change">Change</string>
    <string name="unpaid">Unpaid:</string>
    <string name="Tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="receipt_printer">Receipt printer</string>
    <string name="usb_printer">Usb printer</string>
    <string name="wifi_printer">WiFi printer</string>
    <string name="bluetooth_printer">Bluetooth printer</string>
    <string name="cash_btn">Cash button</string>
    <string name="use_split">Separated by \",\" \ (up to 10)</string>
    <string name="selectPAX">select PAX</string>
    <string name="reprint_msg">Reprint msg</string>
    <string name="show_image">Show Image</string>
    <string name="choicePeople">Please select the number:</string>
    <string name="auto_logout">Automatic logout</string>
    <string name="dine_in">Dine in</string>
    <string name="operator">Operator</string>
    <string name="cashier">Cashier</string>
    <string name="unpaid_order">Unpaid Order</string>
    <string name="closed_order">Closed order</string>
    <string name="collection">Self-Collection</string>
    <string name="delivery">Delivery</string>
    <string name="status">Status</string>
    <string name="hold">Hold</string>
    <string name="amount">Amount</string>
    <string name="void_reason">Void reason</string>
    <string name="monthly_sales_amount">Monthly Sales Amount</string>
    <string name="items_ranking">Items Ranking</string>
    <string name="items_percent">Items Ranking Percent</string>
    <string name="real_time_sales">Real-time Sales</string>
    <string name="time_period_analysis">Time-Period Analysis</string>
    <string name="report">Report</string>
    <string name="table">Table</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure to void this item?</string>
    <string name="edit_delete_reason">Edit void reason</string>
    <string name="Void">Void</string>
    <string name="start_time">Select time:</string>
    <string name="name">Name</string>
    <string name="singleDay">Single</string>
    <string name="range">Range</string>
    <string name="close">Close</string>
    <string name="select_time">Select Time</string>
    <string name="end_time">End Time</string>
    <string name="seatCount">Seat</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_occurred">An error occurred</string>
</resources>