<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="horizontal"
    android:padding="@dimen/padding_15">


    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="bottom"
        android:background="@drawable/view_trans_click_45"
        android:contentDescription="@string/cancel"
        android:padding="@dimen/padding_15"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorDeepGray" />


    <RadioGroup
        android:id="@+id/rgDateMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_white_15"
        android:clickable="false"
        android:elevation="5dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_15"
        android:paddingTop="@dimen/padding_15"
        android:paddingEnd="@dimen/padding_15"
        android:paddingBottom="@dimen/padding_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClose">

        <RadioButton
            android:id="@+id/rbSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5"
            android:text="@string/singleDay"
            android:textSize="@dimen/sp_6" />

        <RadioButton
            android:id="@+id/rbRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:padding="@dimen/padding_5"
            android:text="@string/range"
            android:textSize="@dimen/sp_6" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvStartTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/start_time"
        app:layout_constraintStart_toStartOf="@+id/rgDateMode"
        app:layout_constraintTop_toBottomOf="@+id/rgDateMode" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@drawable/button_overlay_15"
        android:padding="@dimen/padding_15"
        android:text="@string/select_time"
        android:textColor="@color/selector_text"
        android:textSize="@dimen/sp_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTimeTitle" />

    <TextView
        android:id="@+id/tvEndTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/end_time"
        app:layout_constraintStart_toStartOf="@+id/tvStartTimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_3"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@drawable/button_overlay_15"
        android:padding="@dimen/padding_15"
        android:text="@string/select_time"
        android:textColor="@color/selector_text"
        android:textSize="@dimen/sp_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEndTimeTitle" />


    <TextView
        android:visibility="gone"
        android:id="@+id/tv_seatCountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/seatCount"
        app:layout_constraintStart_toStartOf="@+id/tvEndTimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvEndTime" />

    <com.shawnlin.numberpicker.NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:np_max="10"
        app:np_min="1"
        app:np_selectedTextColor="@color/primaryColor"
        app:np_selectedTextSize="@dimen/sp_10"
        app:np_textColor="@color/primaryLightColor"
        app:np_textSize="@dimen/sp_8"
        app:np_value="1"
        app:layout_constraintStart_toStartOf="@+id/tvEndTimeTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_seatCountTitle"/>



    <com.savvi.rangedatepicker.CalendarPickerView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_6"
        android:clipToPadding="false"
        app:layout_constraintEnd_toStartOf="@+id/btnOK"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toTopOf="parent"
        app:tsquare_dividerColor="@android:color/transparent"
        app:tsquare_headerTextColor="@color/primaryColor"
        app:tsquare_orientation_horizontal="false" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_gradient_yellow_45"
        android:elevation="3dp"
        android:paddingStart="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_10"
        android:text="@string/sure"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/sp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="rgDateMode,tvEndTime,tvStartTime" />


</androidx.constraintlayout.widget.ConstraintLayout>